unreleased:
Use native text rendering

1.8 (2019.10.06):
Fix launching application on KF5 5.61.0 and above

1.7 (2019.05.17):
Add setting to overwrite automatic layout

1.6 (2019.01.31):
Improve margins and disable clipping

1.5 (2018.08.06):
Add config option to change upload and download display order

1.4 (2017.07.08):
Add optional interfaces whitelist

1.3 (2016.03.03):
Show combined network speed for all devices
Display proper (long) speed units
Show download and upload speed separately config option
Launch user defined application when clicked

1.2 (2016.02.09):
Layout fixes
Shortened speed units config option

1.1 (2016.01.18):
Layout fixes
Font size config option

1.0 (2016.01.16):
First release